--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.8.RELEASE</version>
+		<version>3.1.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.insure_sense</groupId>
@@ -14,8 +14,8 @@
 	<name>training</name>
 	<description>Training Project</description>
 	<properties>
-		<java.version>11</java.version>
-		<Springdoc-openapi-version>1.5.2</Springdoc-openapi-version>
+		<java.version>17</java.version>
+		<Springdoc-openapi-version>1.6.15</Springdoc-openapi-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,8 +24,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -58,9 +58,9 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.11.0</version>
+        <version>1.14.1</version>
         <configuration>
-          <nodeVersion>v14.15.1</nodeVersion>
+          <nodeVersion>v18.18.0</nodeVersion>
         </configuration>
         <executions>
           <execution>
